LPS-137732 Fix gap between card ratio

--- a/modules/apps/site/site-insurance-site-initializer/remote-web-components/raylife-d2c-web/src/styles/components/fragments/card.scss
+++ b/modules/apps/site/site-insurance-site-initializer/remote-web-components/raylife-d2c-web/src/styles/components/fragments/card.scss
@@ -22,7 +22,7 @@
   & > .card-content {
     display: flex;
     flex-direction: column;
-    gap: 2.5rem;
+    gap: 2rem;
 
     .content-row {
       display: flex;
